	packages that are bundled with IPython. (The first one is simplegeneric).

	* IPython/Extensions/ipipe.py (ifile/ils): Readd output of the parent
	directory which as been dropped in r1703.

	* IPython/Extensions/ipipe.py (iless): Fixed.

	* IPython/Extensions/ibrowse: Fixed sorting under Python 2.3.

2006-11-03  Fernando Perez  <Fernando.Perez@colorado.edu>

	* scripts/ipython: remove the very first entry in sys.path which
	Python auto-inserts for scripts, so that sys.path under IPython is
	as similar as possible to that under plain Python.

	* IPython/completer.py (IPCompleter.file_matches): Fix
	tab-completion so that quotes are not closed unless the completion
	is unambiguous.  After a request by Stefan.  Minor cleanups in
	ipy_stock_completers.

2006-11-02  Ville Vainio  <vivainio@gmail.com>

	* ipy_stock_completers.py: Add %run and %cd completers.
	
	* completer.py: Try running custom completer for both 
	"foo" and "%foo" if the command is just "foo". Ignore case
	when filtering possible completions.
	
	* UserConfig/ipy_user_conf.py: install stock completers as default	
	
	* iplib.py (history_saving_wrapper), debugger(), ipy_pydb.py:
	simplified readline history save / restore through a wrapper 
	function
	
	
2006-10-31  Ville Vainio  <vivainio@gmail.com>

	* strdispatch.py, completer.py, ipy_stock_completers.py:
	Allow str_key ("command") in completer hooks. Implement 
	trivial completer for 'import' (stdlib modules only). Rename 
	ipy_linux_package_managers.py to ipy_stock_completers.py.
	SVN completer.
	
	* Extensions/ledit.py: %magic line editor for easily and
	incrementally manipulating lists of strings. The magic command
	name is %led.

2006-10-30  Ville Vainio  <vivainio@gmail.com>

	* Debugger.py, iplib.py (debugger()): Add last set of Rocky 
	Bernsteins's patches for pydb integration.
	http://bashdb.sourceforge.net/pydb/
	
	* strdispatch.py, iplib.py, completer.py, IPython/__init__.py,
	Extensions/ipy_linux_package_managers.py, hooks.py: Implement 